<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical"
        tools:context=".main.ui.LocaleActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_10dp">

            <TextView
                android:id="@+id/textView14"
                style="@style/Theme.LabelText.OnSurface.PrimaryColor.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/choose_your_language"
                android:theme="@style/TextAppearance.Subtitle1"
                app:layout_constraintStart_toStartOf="@+id/textView4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:background="@drawable/top_right_round_corner_sedondary"
            android:orientation="vertical"
            android:padding="@dimen/margin_30dp">

            <org.evidyaloka.common.view.RecursiveRadioGroup
                android:id="@+id/rg_locales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <RadioButton
                            android:id="@+id/rb_english"
                            android:layout_width="@dimen/size_140dp"
                            android:layout_height="@dimen/size_120dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginRight="@dimen/margin_10dp"
                            android:layout_marginBottom="@dimen/margin_10dp"
                            android:background="@drawable/selector_english_locale"
                            android:button="@null"
                            android:checked="true"
                            android:foregroundGravity="bottom|right"
                            android:gravity="start|top"
                            android:padding="@dimen/padding_20dp"
                            android:text="@string/english"
                            android:textColor="@color/persona_radio" />

                        <RadioButton
                            android:id="@+id/rb_hindi"
                            android:layout_width="@dimen/size_140dp"
                            android:layout_height="@dimen/size_120dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_10dp"
                            android:background="@drawable/selector_hindi_locale"
                            android:button="@null"
                            android:foregroundGravity="bottom|right"
                            android:gravity="start|top"
                            android:padding="@dimen/padding_20dp"
                            android:text="@string/hindi"
                            android:textColor="@color/persona_radio" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_tamil"
                            android:layout_width="@dimen/size_140dp"
                            android:layout_height="@dimen/size_120dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginRight="@dimen/margin_10dp"
                            android:layout_marginBottom="@dimen/margin_10dp"
                            android:background="@drawable/selector_tamil_locale"
                            android:button="@null"
                            android:foregroundGravity="bottom|right"
                            android:gravity="start|top"
                            android:padding="@dimen/padding_20dp"
                            android:text="@string/tamil"
                            android:textColor="@color/persona_radio" />

                        <RadioButton
                            android:id="@+id/rb_kanada"
                            android:layout_width="@dimen/size_140dp"
                            android:layout_height="@dimen/size_120dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_10dp"
                            android:background="@drawable/selector_kanada_locale"
                            android:button="@null"
                            android:foregroundGravity="bottom|right"
                            android:gravity="start|top"
                            android:padding="@dimen/padding_20dp"
                            android:text="@string/kanada"
                            android:textColor="@color/persona_radio" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_telugu"
                            android:layout_width="@dimen/size_140dp"
                            android:layout_height="@dimen/size_120dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginRight="@dimen/margin_10dp"
                            android:layout_marginBottom="@dimen/margin_10dp"
                            android:background="@drawable/selector_telugu_locale"
                            android:button="@null"
                            android:foregroundGravity="bottom|right"
                            android:gravity="start|top"
                            android:padding="@dimen/padding_20dp"
                            android:text="@string/telugu"
                            android:textColor="@color/persona_radio" />

                        <RadioButton
                            android:id="@+id/rb_marathi"
                            android:layout_width="@dimen/size_140dp"
                            android:layout_height="@dimen/size_120dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_10dp"
                            android:background="@drawable/selector_marathi_locale"
                            android:button="@null"
                            android:foregroundGravity="bottom|right"
                            android:gravity="start|top"
                            android:padding="@dimen/padding_20dp"
                            android:text="@string/marathi"
                            android:textColor="@color/persona_radio" />
                    </LinearLayout>
                </LinearLayout>

            </org.evidyaloka.common.view.RecursiveRadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_locale_select"
                style="@style/Theme.Student.Button.Gradient"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:enabled="true"
                android:text="@string/continue_text"
                android:textAllCaps="false" />

            <Button
                style="@style/Theme.Student.Button.Gradient"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_40dp"
                android:text="@string/continue_text" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>